@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.springframework.cloud</groupId>
     <artifactId>spring-cloud-starter-parent</artifactId>
-    <version>2020.0.0</version>
+    <version>2020.0.4</version>
   </parent>
 
   <groupId>ru.vlapin.demo</groupId>
@@ -16,30 +16,35 @@
   <properties>
 
     <!--region General-->
-    <java.version>15</java.version>
-    <minimal.maven.version>3.6.1</minimal.maven.version>
+    <java.version>17</java.version>
+    <minimal.maven.version>3.8.2</minimal.maven.version>
     <!--endregion-->
 
     <!--region Bills of material (BOM)-->
+    <spring-boot.version>2.5.5</spring-boot.version>
     <!--endregion-->
 
     <!--region Libs-->
-    <vavr.version>0.10.3</vavr.version>
+    <vavr.version>0.10.4</vavr.version>
     <!--<vavr.version>1.0.0-alpha-3</vavr.version>-->
-    <lombok.version>1.18.16</lombok.version>
-    <checker.version>3.9.1</checker.version>
-    <annotations.version>20.1.0</annotations.version>
+    <lombok.version>1.18.20</lombok.version>
+    <checker.version>3.18.0</checker.version>
+    <annotations.version>22.0.0</annotations.version>
     <jcip-annotations.version>1.0</jcip-annotations.version>
-    <spotbugs.version>4.2.0</spotbugs.version>
-    <error_prone_annotations.version>2.5.1</error_prone_annotations.version>
-    <springdoc-openapi.version>1.5.2</springdoc-openapi.version>
+    <spotbugs.version>4.4.1</spotbugs.version>
+    <error_prone_annotations.version>2.9.0</error_prone_annotations.version>
+    <springdoc-openapi.version>1.5.10</springdoc-openapi.version>
     <!--endregion-->
 
     <!--region Test-libs-->
-    <testcontainers.version>1.15.1</testcontainers.version>
+    <testcontainers.version>1.16.0</testcontainers.version>
     <!--endregion-->
 
     <!--region Plugins-->
+    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+    <maven.compiler.release>${java.version}</maven.compiler.release>
+    <maven.compiler.parameters>true</maven.compiler.parameters>
+
     <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
     <versions-maven-plugin.version>2.7</versions-maven-plugin.version>
     <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
@@ -48,9 +53,9 @@
     <spotbugs-maven-plugin.version>4.0.0</spotbugs-maven-plugin.version>
     <dockerfile-maven-plugin.version>1.4.13</dockerfile-maven-plugin.version>
 
-    <lombok-maven-plugin.version>1.18.16.0</lombok-maven-plugin.version>
+    <lombok-maven-plugin.version>1.18.20.0</lombok-maven-plugin.version>
     <properties-maven-plugin.version>1.0.0</properties-maven-plugin.version>
-    <openapi-generator-maven-plugin.version>5.0.0</openapi-generator-maven-plugin.version>
+    <openapi-generator-maven-plugin.version>5.2.1</openapi-generator-maven-plugin.version>
     <!--endregion-->
 
   </properties>
@@ -275,10 +280,68 @@
           <version>${maven-compiler-plugin.version}</version>
           <configuration>
             <compilerArgs>
+              <!--<arg>-parameters</arg>-->
               <arg>--enable-preview</arg>
+              <!--<arg>-Xplugin:Manifold</arg>-->
+              <!--<arg>-Xlint:preview</arg>-->
+              <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+              <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+              <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+              <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+              <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+              <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+              <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+              <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+              <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+              <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
             </compilerArgs>
+            <annotationProcessorPaths>
+              <!--<processorPath>-->
+                <!--<groupId>systems.manifold</groupId>-->
+                <!--<artifactId>manifold-all</artifactId>-->
+                <!--<version>${manifold-version}</version>-->
+              <!--</processorPath>-->
+              <processorPath>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+              </processorPath>
+              <processorPath>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-configuration-processor</artifactId>
+                <version>${spring-boot.version}</version>
+              </processorPath>
+            </annotationProcessorPaths>
+            <annotationProcessors>
+              <annotationProcessor>lombok.launch.AnnotationProcessorHider$AnnotationProcessor</annotationProcessor>
+              <annotationProcessor>lombok.launch.AnnotationProcessorHider$ClaimingProcessor</annotationProcessor>
+              <annotationProcessor>org.springframework.boot.configurationprocessor.ConfigurationMetadataAnnotationProcessor</annotationProcessor>
+            </annotationProcessors>
           </configuration>
         </plugin>
+        <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${maven-surefire-plugin.version}</version>
+          <configuration>
+            <argLine>--enable-preview</argLine>
+            <includes>
+              <include>**/Test*.java</include>
+              <include>**/*Test.java</include>
+              <include>**/*Tests.java</include>
+              <include>**/*TestCase.java</include>
+            </includes>
+
+            <properties>
+              <!--<includeTags>fast</includeTags>-->
+              <excludeTags>slow</excludeTags>
+              <!--<configurationParameters>-->
+              <!--junit.jupiter.conditions.deactivate = *-->
+              <!--</configurationParameters>-->
+            </properties>
+
+          </configuration>
+        </plugin>
+
         <plugin>
           <artifactId>maven-enforcer-plugin</artifactId>
           <version>${maven-enforcer-plugin.version}</version>
@@ -306,28 +369,6 @@
             <generateBackupPoms>false</generateBackupPoms>
             <!--suppress MybatisMapperXmlInspection, MavenModelInspection-->
             <rulesUri>file://${maven.multiModuleProjectDirectory}/ruleset.xml</rulesUri>
-          </configuration>
-        </plugin>
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>${maven-surefire-plugin.version}</version>
-          <configuration>
-            <argLine>--enable-preview</argLine>
-            <includes>
-              <include>**/Test*.java</include>
-              <include>**/*Test.java</include>
-              <include>**/*Tests.java</include>
-              <include>**/*TestCase.java</include>
-            </includes>
-
-            <properties>
-              <!--<includeTags>fast</includeTags>-->
-              <excludeTags>slow</excludeTags>
-              <!--<configurationParameters>-->
-              <!--junit.jupiter.conditions.deactivate = *-->
-              <!--</configurationParameters>-->
-            </properties>
-
           </configuration>
         </plugin>
         <plugin>
@@ -432,18 +473,18 @@
             </execution>
           </executions>
         </plugin>
-        <plugin>
-          <groupId>org.openapitools</groupId>
-          <artifactId>openapi-generator-maven-plugin</artifactId>
-          <version>${openapi-generator-maven-plugin.version}</version>
-          <executions>
-            <execution>
-              <goals>
-                <goal>generate</goal>
-              </goals>
-            </execution>
-          </executions>
-        </plugin>
+        <!--<plugin>-->
+        <!--  <groupId>org.openapitools</groupId>-->
+        <!--  <artifactId>openapi-generator-maven-plugin</artifactId>-->
+        <!--  <version>${openapi-generator-maven-plugin.version}</version>-->
+        <!--  <executions>-->
+        <!--    <execution>-->
+        <!--      <goals>-->
+        <!--        <goal>generate</goal>-->
+        <!--      </goals>-->
+        <!--    </execution>-->
+        <!--  </executions>-->
+        <!--</plugin>-->
       </plugins>
     </pluginManagement>
 
